9 August 2006: Wouter
	- tested nsdc functionality, make install and make uninstall.
	- set O_NONBLOCKING on xfrd tcp sockets before the connect call,
	  because the handshaking can take very long too.

8 August 2006: Wouter
	- fixes for checkconf test, more portable.
	- removed items from TODO that have been tested.
	  for multihomed servers you have to bind to each interface
	  explicitly to get outgoing ip-address the same as query
	  destination ip-address.
	  Forks and if-existing are tested and ok in testplan tests.
	  close_all_sockets is called by child, if tcponly, so leave it. 
	- user name check is hard portably with shell scripts, and 
	  packaging could set a default user that does not exist on a machine.
	- empty nodes (nonterminals) give no nxdomain any more (todo item done).
	- removed (old) from TODO.
	- removed contrib/buildzones.pl, it is outdated.

7 August 2006: Wouter
	- Made the tests a little more portable.
	- fixed mempcy unable to handle unaligned memory addresses on Solaris,
	  used memmove istead of memcpy in zonec LOC conversion code.
	- another unaligned memory access, when storing off_t pointer in 
	  difffile.c, used memmove.

4 August 2006: Wouter
	- nsd will start if diff file is corrupt, with a log message.
	  It ignores the bad data.
	- tpkg files do not override PATH, svnhook sets it. So user can
	  set path to utilities on the system to run the tests.
	- running testset on DecAlpha discovered uninitialised variable
	  in NSD. Fixed.
	- Jakob Schlyter asked for building nsd3 in an obj dir, i.e.
	  mkdir obj; cd obj; ../configure && make. Fixed up makefile for that.
	- and bug137.tpkg for separate obj dir building.

3 August 2006: Wouter
	- more tests in mesh test.
	- changed test packages to put nsd log to test result "/dev/stdout".
	- test packages more portable - use default 'dig' location.
	  also, path is appended to, instead of replaced.

2 August 2006: Wouter
	- Region can be customised for detailed memory handling.