@@ -62,12 +62,12 @@ server:
 
 	# The file where incoming zone transfers are stored.
 	# run nsd-patch to update zone files, then you can safely delete it.
-	# difffile: ixfr.db
+	# difffile: "@difffile@"
 
 	# The file where secondary zone refresh and expire timeouts are kept.
 	# If you delete this file, all secondary zones are forced to be 
 	# 'refreshing' (as if nsd got a notify).
-	# xfrdfile: "xfrd.state"
+	# xfrdfile: "@xfrdfile@"
 
 	# Number of seconds between reloads triggered by xfrd.
 	# xfrd-reload-timeout: 10
